# xander-hive-framework

./: .gitignore  ARCHITECTURE.md  CV_BLURB.md  Dockerfile  LICENSE  README.md  docker-compose.yml  openclaw.json.example  pyproject.toml  requirements.txt  test_stub.py
agents/degen-trader/: main.py
agents/hunter/: main.py
agents/main/: main.py
agents/prof/: main.py
scripts/: resource_check.py
src/xander/: __init__.py  broker.py  gateway.py  schemas.py  session.py  state.py
tests/: test_broker.py  test_imports.py  test_schemas.py  test_session.py  test_state.py
xander/: client.py
